# TinyRecursiveModels

./: .gitignore  pretrain.py  pyproject.toml  test.py
config/: cfg_pretrain.yaml
evaluators/: arc.py
models/recursive_reasoning/: trm.py
scripts/: eval_solution.py
