[project]
name = "tinyrecursivemodels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adam-atan2>=0.0.3",
    "argdantic>=1.3.3",
    "coolname>=2.2.0",
    "einops>=0.8.1",
    "huggingface-hub>=1.2.3",
    "hydra-core>=1.3.2",
    "ninja>=1.13.0",
    "numba>=0.63.1",
    "omegaconf>=2.3.0",
    "pydantic>=2.12.5",
    "setuptools-scm>=9.2.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "wandb>=0.23.1",
]

[tool.uv]
extra-build-dependencies = { adam_atan2 = [{ requirement = "torch", match-runtime = true }]}
no-build-isolation-package = ["adam-atan2"]
